# NYC-Crash-Data-Optimizations

./: .gitignore  CMakeLists.txt  README.md  process_logs.py  process_logs_thread.py  process_memory.py  runX.sh
metrics/: phase_data.csv  thread_data.csv
phase-1/: CollisionDataset.cpp  Main.cpp
phase-2/: Collision.h  CollisionDataset.cpp  Main.cpp
phase-2a/: CollisionDataset.cpp  CollisionDataset.h
phase-2b/: CollisionDataset.cpp  Main.cpp
phase-2c/: CollisionDataset.cpp  Main.cpp
phase-3/: CollisionDataset.cpp  CollisionDataset.h  Collisions.h  Main.cpp
